# SB-technical-assessment

./: README.md  pyproject.toml
src/: preprocess.py
