[tool.poetry]
name = "sb-technical-assesment"
version = "0.1.0"
description = ""
authors = ["Dhruv Shekhat <shekhatdhruv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12, <3.13"
pydantic-settings = "^2.4.0"
pandas = "2.2.3"
scikit-learn = "1.5.2"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"